# pasteboard

./: CMakeLists.txt  build.py  pyproject.toml  setup.py
.github/workflows/: release.yaml
src/pasteboard/: CMakeLists.txt
